# ir-phone-validate

./: .gitignore  .npmrc  CMakeLists.txt  LICENSE  README.md  example.html  example.js  ir-phone-validate.c  ir-phone-validate.js  package-lock.json  package.json  wasm-ir-phone-validate.js  wasm-ir-phone-validate.wasm  wasm-wrapper-validator.js
.github/workflows/: release-package.yml
branding/: Logo.xcf
test/: ir-phone-validate.js
